style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Inter', system-ui;
}

.container {
    padding: 80px 0;
}

.row {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
    padding: 24px;
}

ul {
    list-style: none;
}

.purple {
    color: rgb(100 21 255);
}

.nav__link--primary,
.header__input--button,
.section__btn {
    transition: filter 300ms ease;
}

.nav__link--primary:hover,
.header__input--button:hover,
.section__btn:hover {
    cursor: pointer;
    filter: brightness(85%);
}

/* NAVIGATION */

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 32px 0;
}

.logo {
    display: flex;
    align-items: center;
    justify-content: center;
}

.logo,
.nav__link {
    text-decoration: none;
}

.logo__img {
    width: 40px;
    margin-right: 12px;
}

.logo__text {
    font-size: 24px;
    font-weight: 900;
    color: black;
    transition: color 300ms ease;
}

nav .logo__text:hover {
    color: rgb(100, 21, 255);
}

.logo__text,
.nav__link {
    letter-spacing: 0.025em;
}

.nav__links {
    display: flex;
    align-items: center;
}

.nav__link {
    margin: 0 24px;
    font-size: 14px;
    font-weight: 600;
    color: #242424;
    border-bottom: 2px solid transparent;
    padding-bottom: 4px;
    transition: all 300ms ease;

}

.nav__link:hover {
    color: rgb(100, 21, 255);
    border-color: rgb(100, 21, 255);
}

.nav__link--secondary {
    margin-left: 40px;
}

.nav__link--primary {
    background-color: rgb(100 21 255);
    color: white !important; 
    padding: 12px 32px;
    border-radius: 50px;
    margin-left: 0;
}

.fa-bars {
    background-color: transparent;
    text-align: center;
    width: 32px;
    font-size: 20px;
    cursor: pointer;
    transition: all 300ms ease;
    display: none;
}

.menu__backdrop {
    position: absolute;
    background-color: white;
    border: 1px solid rgb(203, 213, 224);
    border-radius: 8px;
    z-index: 100;
    left: 0px;
    right: 0px;
    top: 0px;
    bottom: 500px;
    margin: 1.5rem 1rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    visibility: hidden;
    opacity: 0;
    transition: all 300ms ease;
}

.menu--open .menu__backdrop {
    visibility: visible;
    opacity: 1;
}

.backdrop__link {
    text-decoration: none;
    margin: 12px 0;
    border-bottom: 2px solid transparent;
    padding-bottom: 4px;
    font-size: 1.125rem;
    color: black;
    font-weight: 600;
    transition: all 300ms ease;
}

.backdrop__link--primary {
    background-color: rgb(100, 21, 255);
    color: white !important;
    padding: 16px 36px;
    border-radius: 9999px;
}

.backdrop__link--primary:hover {
    filter: brightness(0.85);
}

.backdrop__link:hover {
    border-color: rgb(100, 21, 255);
    color: rgb(100, 21, 255);
}

.fa-times {
    position: absolute;
    right: 10px;
    top: 34px;
    padding: 8px;
    font-size: 20px;
    transition: color 300ms ease
}

.fa-times:hover,
.fa-bars:hover {
    color: rgb(100, 21, 255);
    cursor: pointer;
}

/* HEADER */

header {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 64px;
    width: 100%;
}

.header__left {
    width: 40%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    text-align: left;
}

.header__title {
    font-size: 48px;
}

.header__para {
    margin: 32px 0;
    font-size: 18px;
    color: #243E63;
    word-spacing: 0.05em;
}

.header__input--container {
    position: relative;
    max-width: 28rem;
}

.header__input {
    padding: 20px 192px 20px 32px;
    border-radius: 9999px;
    font-weight: 500;
    font-size: 100%;
    border: 2px solid gray;
}

.header__input--button {
    position: absolute;
    right: 0px;
    top: 0px;
    bottom: 0px;
    background-color: rgb(100 21 255);
    color: white;
    border-radius: 9999px;
    border: none;
    font-size: 16px;
    font-weight: 600;
    width: 156px;
    margin: 8px 4px 8px 0;
    line-height: 1;
}

.customers__container {
    margin-top: 80px;
}

.customers__title {
    color: #A0AEC0;
    font-size: 12px;
    font-weight: 700;
    letter-spacing: 0.05em;
}

.customers__img {
    width: 100%;
    padding-right: 64px;
    margin-top: 16px;
    opacity: 0.5;
}

.header__right {
    width: 60%;
}

.header__img {
    width: 100%;
}

/* FEATURES */

#features {
    margin-top: 124px;
}

.features__row {
    max-width: 1024px;
}

.features__description {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.section__title {
    color: rgb(100 21 255);
    font-weight: 700;
    font-size: 16px;
    letter-spacing: 0.1em;
}

.section__subtitle {
    font-size: 48px;
    font-weight: 900;
    letter-spacing: 0.025em;
    color: #243E63;
    margin: 32px 0;
}

.section__para {
    color: #7C8BA1;
    font-size: 18px;
    font-weight: 500;
    width: 100%;
    max-width: 36rem;
    text-align: center;
    line-height: 1.625;
}

.services {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    margin-top: 32px;
}

.service {
    width: calc(100% / 3);
    display: flex;
    padding: 0 24px;
    margin: 32px 0;
}

.service__img {
    border: 1px solid rgb(226, 232, 240);
    padding: 20px;
    border-radius: 9999px;
}

.service__description {
    margin-left: 16px;
    margin-top: 8px;
}

.service__title {
    font-size: 24px;
    color: #243E63;
    font-weight: 700;
    line-height: 1;
    letter-spacing: 0.025em;
}

.service__para {
    margin-top: 16px;
    color: rgb(124, 139, 161);
    line-height: 2;
    font-weight: 500;
}

/* QUALITY */

.quality__row {
    display: flex;
}

.quality__description {
    width: 50%;
}

#quality .section__para {
    text-align: left;
}
/* ... */

